<resources>
    <string name="app_name">BonusLogin</string>
    <string name="sign_in">Sign In</string>
    <string name="bonus_login">Login</string>
    <string name="password">Password</string>
    <string name="username">Username</string>
    <string name="city">City</string>
    <string name="textview">TextView</string>
    <string name="welcome">welcome</string>
    <string name="home">Home</string>
</resources>
